--- a/public/index.html
+++ b/public/index.html
@@ -1,27 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta content="IE=edge" http-equiv="X-UA-Compatible" />
-    <meta name="theme-color" content="#CEF4FA" />
-    <meta content="width=device-width,initial-scale=1.0" name="viewport" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans:200,300,400,400i,500,600,700%7CMerriweather:300,300i%7CMaterial+Icons"
-      rel="stylesheet"
-    />
-    <link href="https://riliv.co/img/riliv/title.png" rel="icon" />
-    <title>Riliv</title>
-    <script src="https://apis.google.com/js/api:client.js"></script>
-  </head>
+	<head>
+		<meta charset="utf-8" />
+		<meta content="IE=edge" http-equiv="X-UA-Compatible" />
+		<meta name="theme-color" content="#11CBE1" />
+		<meta content="width=device-width,initial-scale=1.0" name="viewport" />
+		<link
+			href="https://fonts.googleapis.com/css?family=Open+Sans:200,300,400,400i,500,600,700%7CMerriweather:300,300i%7CMaterial+Icons"
+			rel="stylesheet"
+		/>
+		<link href="https://riliv.co/img/favicon.ico" rel="icon" />
+		<link href="https://riliv.co/img/favicon.ico" rel="shortcut icon" />
+		<link
+			href="https://riliv.co/img/android-chrome-192x192.png"
+			rel="icon"
+			sizes="192x192"
+		/>
+		<link
+			href="https://riliv.co/img/android-chrome-192x192.png"
+			rel="icon"
+			sizes="192x192"
+		/>
+		<link
+			href="https://riliv.co/img/apple-touch-icon.png"
+			rel="apple-touch-icon"
+			sizes="128x128"
+		/>
 
-  <body>
-    <noscript
-      ><strong
-        >We're sorry but tkm2 doesn't work properly without JavaScript enabled.
-        Please enable it to continue.</strong
-      ></noscript
-    >
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+		<title>Riliv - Tes Kesehatan Mental</title>
+		<script src="https://apis.google.com/js/api:client.js"></script>
+	</head>
+
+	<body>
+		<noscript
+			><strong
+				>We're sorry but tkm2 doesn't work properly without JavaScript enabled.
+				Please enable it to continue.</strong
+			></noscript
+		>
+		<div id="app"></div>
+		<!-- built files will be auto injected -->
+	</body>
 </html>
